--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ python:
 env:
   - DJANGO_VERSION=1.3.1
   - DJANGO_VERSION=1.4
+  - DJANGO_VERSION=1.5
+  - DJANGO_VERSION=1.6
 install: 
    # Travis is currently working on
  - pip install -q Django==$DJANGO_VERSION --use-mirrors
