--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ env:
   - DJANGO_VERSION=1.5
   - DJANGO_VERSION=1.6
   - DJANGO_VERSION=1.7
+  - DJANGO_VERSION=1.8
 
 matrix:
   exclude:
@@ -20,6 +21,8 @@ matrix:
       env: DJANGO_VERSION=1.6
     - python: "2.6"
       env: DJANGO_VERSION=1.7
+    - python: "2.6"
+      env: DJANGO_VERSION=1.8
     
 install: 
    # Travis is currently working on
