update pip install command

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,6 @@ matrix:
       env: DJANGO_VERSION=1.9
     
 install: 
-   # Travis is currently working on
- - pip install -q Django==$DJANGO_VERSION --use-mirrors
+ - pip install Django==$DJANGO_VERSION
 # Tell Travis how to run the test script itself
 script: python quicktest.py shibboleth
