--- a/.travis.yml
+++ b/.travis.yml
@@ -7,18 +7,35 @@ python:
   - "3.3"
   - "3.4"
   - "3.5"
+  - "3.6"
 
 # List the versions of Django you'd like to test against
 env:
   - DJANGO_VERSION=1.8
   - DJANGO_VERSION=1.9
+  - DJANGO_VERSION=1.10
+  - DJANGO_VERSION=1.11
 
 matrix:
   exclude:
     - python: "3.2"
       env: DJANGO_VERSION=1.9
+    - python: "3.2"
+      env: DJANGO_VERSION=1.10
+    - python: "3.2"
+      env: DJANGO_VERSION=1.11
     - python: "3.3"
       env: DJANGO_VERSION=1.9
+    - python: "3.3"
+      env: DJANGO_VERSION=1.10
+    - python: "3.3"
+      env: DJANGO_VERSION=1.11
+    - python: "3.6"
+      env: DJANGO_VERSION=1.8
+    - python: "3.6"
+      env: DJANGO_VERSION=1.9
+    - python: "3.6"
+      env: DJANGO_VERSION=1.10
     
 install: 
  - pip install Django==$DJANGO_VERSION
