--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
   - DJANGO_VERSION=1.9
   - DJANGO_VERSION=1.10
   - DJANGO_VERSION=1.11
+  - DJANGO_VERSION=2.0
 
 matrix:
   exclude:
@@ -29,6 +30,8 @@ matrix:
       env: DJANGO_VERSION=1.9
     - python: "3.6"
       env: DJANGO_VERSION=1.10
+    - python: "3.6"
+      env: DJANGO_VERSION=2.0
     
 install: 
  - pip install Django==$DJANGO_VERSION
