--- a/.travis.yml
+++ b/.travis.yml
@@ -14,15 +14,20 @@ env:
   - DJANGO_VERSION=1.9
   - DJANGO_VERSION=1.10
   - DJANGO_VERSION=1.11
+  - DJANGO_VERSION=2.0
 
 matrix:
   exclude:
+    - python: "2.7"
+      env: DJANGO_VERSION=2.0
     - python: "3.3"
       env: DJANGO_VERSION=1.9
     - python: "3.3"
       env: DJANGO_VERSION=1.10
     - python: "3.3"
       env: DJANGO_VERSION=1.11
+    - python: "3.3"
+      env: DJANGO_VERSION=2.0
     - python: "3.6"
       env: DJANGO_VERSION=1.8
     - python: "3.6"
