--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ matrix:
       env: DJANGO_VERSION=2.0
     - python: "2.7"
       env: DJANGO_VERSION=2.1
+    - python: "3.4"
+      env: DJANGO_VERSION=2.1
     
 install: 
  - pip install Django==$DJANGO_VERSION
