--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
   - DJANGO_VERSION=1.11
   - DJANGO_VERSION=2.0
   - DJANGO_VERSION=2.1
+  - DJANGO_VERSION=2.2
 
 matrix:
   exclude:
@@ -21,6 +22,8 @@ matrix:
       env: DJANGO_VERSION=2.0
     - python: "2.7"
       env: DJANGO_VERSION=2.1
+    - python: "2.7"
+      env: DJANGO_VERSION=2.2
     
 install: 
  - pip install Django==$DJANGO_VERSION
