--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,12 @@ python:
 
 env:
   - DJANGO_VERSION=1.11
-  - DJANGO_VERSION=2.0
   - DJANGO_VERSION=2.1
   - DJANGO_VERSION=2.2
+  - DJANGO_VERSION=3.0
 
 install: 
+ - pip install --upgrade pip
  - pip install Django==$DJANGO_VERSION
 # Tell Travis how to run the test script itself
 script: python quicktest.py shibboleth
