--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,7 +14,7 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
-        django-version: [1.11, 2.2, 3.0]
+        django-version: [2.2, 3.0]
 
     steps:
     - uses: actions/checkout@v2
